--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Snackbar</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/snackbar.css" />
   </head>
   <body>
     <a href="./index.html" class="home-page">Back</a>
